# signal

./: .clang-tidy  CMakeLists.txt  CONSTRUCTION_PLAN.md  README.md
.github/workflows/: deploy.yml
_site/: index.html
memory/: MEMORY.md
scripts/: create-station-voices.mjs  generate-motd.sh
server/: Dockerfile  autopilot_eval.c  game_sim.c  game_sim.h  main.c  net_protocol.h  sim_ai.c  sim_asteroid.c  sim_asteroid.h  sim_autopilot.c  sim_autopilot.h  sim_construction.c  sim_construction.h  sim_flight.c  sim_flight.h  sim_nav.c  sim_nav.h  sim_physics.c  sim_physics.h  sim_production.c  sim_production.h
shared/: economy_const.h  module_schema.h  protocol.h  types.h
src/: client.h  hud.c  input.c  local_server.c  main.c  music.c  net.c  net.h  net_sync.c  net_sync.h  onboarding.c  onboarding.h  station_ui.c  station_voice.h  test_main.c  world_draw.c  world_draw.h
tests/: browser-smoke.spec.ts
web/: index.html
